# nnpatch

./: LICENSE  README.md  pyproject.toml
examples/: activation_patching_llama3.py
nnpatch/: __init__.py  activation_patching.py  attribution_patching.py  site.py  utils.py
nnpatch/api/: gemma.py  llama.py  mistral.py  model_api.py
nnpatch/subspace/: __init__.py  interventions.py  steering.py
